# ocltoys

./: .gitignore  .hgignore  .hgtags  AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.txt  autogen.sh  configure.ac
cmake/: AssembleBinDirs.cmake  Configuration.cmake  Dependencies.cmake  KernelPreprocess.cmake  PlatformSpecific.cmake
cmake/SpecializedConfig/: Config_Dade-COPRTHR.cmake  Config_Dade-parallella.cmake  Config_Dade-win64.cmake  Config_Dade.cmake
cmake/Utils/: FindPkgMacros.cmake
common/: CMakeLists.txt  Makefile.am  camera.h  config.h.in  ocltoy.cpp  ocltoy.h  opencl.h  utils.cpp  utils.h  vec.h  version.h  version.h.in
jugCLer/: CMakeLists.txt  Makefile.am  README.txt  animation.cpp  animation.h  jugCLer.cpp  scene.cpp  scene.h
juliagpu/: CMakeLists.txt  Makefile.am  README.txt  juliagpu.cpp  preprocessed_rendering_kernel.cl  renderconfig.h  rendering_kernel.cl
mandelgpu/: CMakeLists.txt  Makefile.am  README.txt  mandelgpu.cpp  rendering_kernel.cl  rendering_kernel_float4.cl
scripts/win/: RUN_JULIAGPU.BAT  RUN_MANDELGPU.BAT  RUN_SMALLPTGPU_CAUSTIC.BAT  RUN_SMALLPTGPU_CAUSTIC3.BAT  RUN_SMALLPTGPU_CORNELL.BAT  RUN_SMALLPTGPU_CORNELL_ALLDEVICES.BAT  RUN_SMALLPTGPU_CORNELL_FOG.BAT  RUN_SMALLPTGPU_CORNELL_SSS.BAT  RUN_SMALLPTGPU_SIMPLE.BAT
smallptgpu/: CMakeLists.txt  Makefile.am  README.txt  geom.h  rendering_kernel.cl  smallptgpu.cpp
smallptgpu/scenes/: caustic.scn  cornell.scn  cornell_large.scn
smallptgpu/webcl/: camera.js  geom.js  scene.js  webcl-smallptgpu.js
web/webcl/smallptgpu/: preprocessed_rendering_kernel.cl  webcl-smallptgpu.html
web/webcl/smallptgpu/scenes/: caustic3.scn  cornell_fog.scn  cornell_sss.scn  simple.scn
